feat: referral stats
